# ctrlrelay

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  repos.manifest  sync
.github/: dependabot.yml
.github/workflows/: build.yml  cla.yml  pages.yml  publish.yml  test.yml
claude-config/: .home-path  .last-export  mcp-servers.json  settings.json  settings.local.json
claude-config/plugins/: installed_plugins.json
claude-config/skills/code-interest-sniff-test/: SKILL.md
claude-config/skills/gh-issue/: SKILL.md
claude-config/skills/gh-prdone/: SKILL.md
claude-config/skills/gh-secops/: SKILL.md
claude-config/skills/pr-create/: SKILL.md
claude-config/skills/project-status/: SKILL.md
claude-config/skills/session-handoff/: SKILL.md
claude-config/team/: README.md  mcp-servers.json
claude-config/team/plugins/: installed_plugins.json
codex-config/: AGENTS.md
codex-config/skills/code-review/: AGENTS.md
codex-config/skills/dead-code/: AGENTS.md
codex-config/skills/duplicate-code/: AGENTS.md
codex-config/skills/security-review/: AGENTS.md
codex-config/skills/vid-verification/: AGENTS.md
config/: orchestrator.yaml  orchestrator.yaml.example
docs/: Claude_Code_Project_Guide.md  Gemfile  _config.yml  architecture.md  bridge.md  cli.md  configuration.md  dev-sync-orchestrator-spec.md  development.md  feedback-loop.md  getting-started.md  index.md  operations.md  personalization.md
docs/reference/: claude-code-project-guide.md  index.md  orchestrator-spec.md
docs/reference/plans/: 2026-04-17-dev-sync-phase0-package-skeleton.md  2026-04-17-dev-sync-phase1-checkpoint-audit.md  2026-04-17-dev-sync-phase2-telegram-bridge.md  2026-04-17-dev-sync-phase3-secops-pipeline.md  2026-04-17-dev-sync-phase4-dev-pipeline.md  index.md
docs/reference/specs/: index.md  orchestrator-design.md
docs/superpowers/plans/: 2026-04-17-dev-sync-phase0-package-skeleton.md  2026-04-17-dev-sync-phase1-checkpoint-audit.md  2026-04-17-dev-sync-phase2-telegram-bridge.md  2026-04-17-dev-sync-phase3-secops-pipeline.md  2026-04-17-dev-sync-phase4-dev-pipeline.md  index.md
lab/ainvirion-design-conventions/: SKILL.md
lab/ainvirion-morphs/: SKILL.md
lab/minions/: SKILL.md  minions-workflow.mermaid
lab/vid-spec/: SKILL.md
mcp-servers/codex-reviewer/: index.js  install.sh  package-lock.json  package.json
scripts/: e2e_install_check.sh  setup-device.sh  sync-claude.sh  sync-codex.sh  sync-repos.sh  update-manifest.sh
src/ctrlrelay/: __init__.py  cli.py  install.py  setup.py
src/dev_sync/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_audit.py  test_bridge_protocol.py  test_bridge_server.py  test_checkpoint.py  test_cli_ci_wait.py  test_cli_dev.py  test_cli_repos.py  test_cli_secops.py  test_cli_start.py  test_cli_version.py  test_config.py  test_dashboard_client.py  test_dev_integration.py  test_dev_pipeline.py  test_dispatcher.py  test_docs_site.py  test_e2e_install.py  test_github.py  test_install.py  test_obs.py  test_personalization.py  test_pipeline_base.py  test_poller.py  test_post_merge.py  test_pr_verifier.py  test_pr_watcher.py  test_scheduler.py  test_secops_integration.py  test_secops_pipeline.py  test_setup.py  test_state.py  test_task_pipeline.py  test_telegram_handler.py  test_transport.py  test_worktree.py
(+102 files in other folders)
