[project]
name = "ctrlrelay"
version = "0.2.0"
description = "Local-first orchestrator for headless coding agents across multiple GitHub repos"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Oscar Valenzuela", email = "oscar.valenzuela.b@gmail.com"}
]
keywords = ["claude", "orchestrator", "automation", "github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
ctrlrelay = "ctrlrelay.cli:app"

[project.urls]
Homepage = "https://github.com/AInvirion/ctrlrelay"
Documentation = "https://ainvirion.github.io/ctrlrelay/"
Repository = "https://github.com/AInvirion/ctrlrelay"
Issues = "https://github.com/AInvirion/ctrlrelay/issues"
Changelog = "https://github.com/AInvirion/ctrlrelay/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctrlrelay"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
